styles.css
html, body {
  margin: 0;
  width: 100%;
  height: 100%;
}

.profile {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

.centered {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.container {
  width: 350px;
}

.card {
  background-color: #eee;
  padding: 30px;
  font-family: 'Roboto', sans-serif;
  border-radius: 5px;
}

.name {
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 46px;
  text-align: center;
}

a {
  color: #468eaf;
}

.portal {
  font-size: 1.5em;
  text-align: center;
}

.portal a {
  color: #333;
}

.portal a:visited {
  color: #333;
}

.portal a:hover {
  color: #000;
}

